# airbnb-advisor

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.history/: .gitignore_20230926165438
.streamlit/: config.toml  secrets.toml.example
data/: charts_data.json  exploration_queries.json  listings.sqlite  metrics.json
data/usa/Bozeman/: neighbourhoods.geojson
data/usa/Cambridge/: neighbourhoods.geojson
data/usa/Rhode Island/: neighbourhoods.geojson
src/: 1_🏡_Home.py  1_🛖_Home.py  3_🔍_SQL_Exploration.py  4_🗺️_Map.py  constants.py  data_reading.py  db_populating.py  generate_chart_data.py  generate_charts.py  language_processing.py  main.py  metrics_generation.py  setup.py  test.py  utilities.py
src/.streamlit/: secrets.toml
src/charts/: overview_charts.py  pricing_charts.py  reviews_charts.py
src/database/: db_session.py  models.py
src/metrics/: overview_metrics.py  pricing_metrics.py  reviews_metrics.py
src/pages/: 2_📈_Charts_&_Metrics.py  2_📊_Charts_&_Metrics.py  2_📊_Charts___Metrics.py  3_🔍_SQL_Exploration.py  4_🗺️_Map.py  5_🤖_AI_Chat.py  6_📖_About.py
src/setup/: amenity_processing.py  data_cleaning.py  data_reading.py  db_populating.py  generate_amenity_impacts.py  generate_chart_data.py  generate_metrics.py
