[tool.poetry]
name = "airbnb-dash"
version = "0.1.0"
description = "Dashboard for interacting with Airbnb dataset from Inside Airbnb project."
authors = ["Ben H. <41309048+benharmandev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
nltk = "^3.8.1"
streamlit = "^1.26.0"
sqlalchemy = "^2.0.20"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
