[tool.poetry]
name = "airbnb-advisor"
version = "0.1.0"
description = "Dashboard for interacting with Airbnb dataset from Inside Airbnb project."
authors = ["Ben H. <41309048+benharmandev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
streamlit = "^1.26.0"
sqlalchemy = "^2.0.20"
millify = "^0.1.1"
fuzzywuzzy = "^0.18.0"
langchain = "^0.0.311"
openai = "^0.28.1"
vegafusion = {version = ">=1.4.0", extras = ["embed"]}
vegafusion-python-embed = ">=1.4.0"
python-levenshtein = "^0.23.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"